<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aluno.neonae.LogarActivity"
    android:orientation="horizontal"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.93"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/logo" />

        <Space
            android:layout_width="275dp"
            android:layout_height="20px"
            android:layout_weight="0.07" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblLogin"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtLogin"
            android:hint="@string/txtLogin" />

        <Space
            android:layout_width="313dp"
            android:layout_height="20px"
            android:layout_weight="0.06" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblSenha"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtSenha"
            android:hint="@string/txtSenha" />

        <Button
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"
            android:id="@+id/btnLogin"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.11" />

        <Button
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:text="@string/btnCadastro"
            android:id="@+id/btnCadastro"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.19" />
    </LinearLayout>
</LinearLayout>

